# post-it

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml  security.yml
backend/: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/app/: lifespan.py  main.py
backend/app/api/: dependencies.py  deps.py  router.py
backend/app/api/endpoints/: auth.py  user.py  users.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: users.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/crud/: base.py  user.py
backend/app/db/: connection.py
backend/app/db/migrations/: 001_init.sql
backend/app/db/models/: user.py
backend/app/db/queries/: loader.py  users.sql
backend/app/db/schemas/: user.py
backend/app/models/: __init__.py  schema.sql  user.py
backend/app/repository/: user.py
backend/app/schemas/: __init__.py  auth.py  token.py  user.py
backend/app/services/: user.py  user_service.py
backend/scripts/: init_db.py  migrate.py
backend/tests/: conftest.py  test_auth.py  test_users.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/layout/: Layout.tsx  Navbar.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/components/posts/: CreatePostCard.tsx  PostCard.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/pages/auth/: LoginPage.tsx  (+1 more)
frontend/src/stores/: authStore.simple.ts  authStore.ts
(+6 files in other folders)
